[gd_scene load_steps=12 format=3 uid="uid://due60y3nm8vku"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_evine"]
[ext_resource type="PackedScene" uid="uid://oyj1vdacrtxd" path="res://common/nodes/hp_node.tscn" id="2_4hw7j"]
[ext_resource type="Texture2D" uid="uid://bkbc7hvutnupm" path="res://entities/player/darkgrey-ship-spritesheet.png" id="2_qj5ws"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wikiw"]
radius = 73.0069

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x7ys4"]
radius = 7.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h4n83"]
atlas = ExtResource("2_qj5ws")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfa8u"]
atlas = ExtResource("2_qj5ws")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxee3"]
atlas = ExtResource("2_qj5ws")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkt65"]
atlas = ExtResource("2_qj5ws")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmfds"]
atlas = ExtResource("2_qj5ws")
region = Rect2(96, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_52a38"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4n83")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfa8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxee3")
}],
"loop": false,
"name": &"move-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkt65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmfds")
}],
"loop": false,
"name": &"move-up",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(75, 323)
script = ExtResource("1_evine")
acceleration = 1200.0
idle_deceleration = 200.0
vertical_speed = 400.0

[node name="HP Node" parent="." instance=ExtResource("2_4hw7j")]
HP = 1

[node name="Shot Limit" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Pickup Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup Area"]
shape = SubResource("CircleShape2D_wikiw")
debug_color = Color(0, 0.956863, 0, 0.223529)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x7ys4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_52a38")
animation = &"idle"

[connection signal="damage_received" from="HP Node" to="." method="_handle_damage"]
[connection signal="healing_received" from="HP Node" to="." method="_handle_healing"]
[connection signal="zero_hp" from="HP Node" to="." method="_handle_death"]
[connection signal="timeout" from="Shot Limit" to="." method="_on_shot_limit_timeout"]
[connection signal="area_entered" from="Pickup Area" to="." method="_on_pickup_area_area_entered"]
